tests/ui/f-string/unescaped_brace_error.rs
#![feature(f_strings)]

pub fn main() {
    let a = f"foo}"; //~ ERROR invalid brace in f-string literal
}
